[package]
name = "queslar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
rand = "0.8.5"
reqwest = "0.11.14"
serde = { version="1.0.152", features=["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features=["full"] }
